[gd_scene load_steps=6 format=2]

[ext_resource path="res://Metroidvania_Tileset.png" type="Texture" id=1]
[ext_resource path="res://Semi-Solid.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 0.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 4 )

[node name="Semi-Solid" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Collission" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.75 )
shape = SubResource( 1 )
one_way_collision = true

[node name="CheckRight" type="Area2D" parent="."]
collision_layer = 0

[node name="Right" type="CollisionShape2D" parent="CheckRight"]
position = Vector2( 13, 0 )
shape = SubResource( 2 )

[node name="CheckLeft" type="Area2D" parent="."]
collision_layer = 0

[node name="Left" type="CollisionShape2D" parent="CheckLeft"]
position = Vector2( -13, 0 )
shape = SubResource( 3 )

[node name="SideWood" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 368, 96, 16, 16 )

[node name="MidWood" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 384, 96, 16, 16 )

[node name="SideMetal" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 368, 112, 16, 16 )

[node name="MidMetal" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 384, 112, 16, 16 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="CheckRight" to="." method="_on_CheckRight_body_entered"]
[connection signal="body_entered" from="CheckLeft" to="." method="_on_CheckLeft_body_entered"]
